--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -11,7 +11,7 @@ jobs:
         python-version: 3.9.19
     - name: Install dependencies
       run: |
-        make install
+        make install-azure
     - name: Test
       run: |
         make test
